# GiJo-chat-server

./: .gitignore  CMakeLists.txt  README.md  cheat_sheet.txt  client  client.c  common.c  common.h  run  server  server.c
abnf/: client  server
app/: CMakeLists.txt  client_config.h  cpt_chat_client.c  cpt_chat_client.h  cpt_chat_server.c  cpt_chat_server.h  sandbox.c  sandbox.h  server_config.h
app/include/: client_config.h  cpt_chat_client.h  cpt_chat_server.h
app/src/: CMakeLists.txt  cpt_chat_server.c
common/: CMakeLists.txt
common/include/: CMakeLists.txt  common.h  linked_list.h  linked_list_types.h  serialize.h
common/src/: CMakeLists.txt  common.c  linked_list.c  serialize.c
cpt_api/: CMakeLists.txt
cpt_api/cpt_voice/: CMakeLists.txt  cpt_voice_client.c  cpt_voice_client.h  cpt_voice_definitions.h  cpt_voice_server.c  cpt_voice_server.h
cpt_api/cpt_voice/include/: cpt_voice.h
cpt_api/cpt_voice/src/: cpt_voice.c
cpt_api/include/: CMakeLists.txt  GlobalChannel.h  GlobalUserTable.h  cpt_builder.h  cpt_channel.h  cpt_client.h  cpt_definitions.h  cpt_gc_config.h  cpt_global_channel.h  cpt_packet_builder.h  cpt_parse.h  cpt_serialize.h  cpt_server.h  cpt_types.h  cpt_user.h  global_config.h  linked_list.h  linked_list_types.h  serialize.h
cpt_api/src/: CMakeLists.txt  GlobalChannel.c  GlobalUserTable.c  cpt_builder.c  cpt_channel.c  cpt_client.c  cpt_global_channel.c  cpt_packet_builder.c  cpt_parse.c  cpt_serialize.c  cpt_server.c  cpt_user.c  linked_list.c
cpt_app/: CMakeLists.txt  sandbox.c
cpt_app/client/: CMakeLists.txt
cpt_app/client/include/: CMakeLists.txt  client_config.h  client_info.h  cpt_chat_client.h
cpt_app/client/src/: CMakeLists.txt  client_info.c  cpt_chat_client.c
cpt_app/include/: CMakeLists.txt  client_config.h  cpt_chat_client.h  cpt_chat_server.h
cpt_app/server/: CMakeLists.txt
cpt_app/server/include/: CMakeLists.txt  channel.h  cpt_chat_server.h  mic_drop.h  server_config.h  server_events.h  server_global.h  server_info.h  server_voice.h  user.h  voice_task.h
cpt_app/server/src/: CMakeLists.txt  channel.c  cpt_chat_server.c  mic_drop.c  server_events.c  server_info.c  server_voice.c  user.c  voice_task.c
cpt_app/src/: cpt_chat_client.c  cpt_chat_server.c
include/: CMakeLists.txt  common.h  echo.h
include/app/: CMakeLists.txt  cpt_chat_server.h
include/cpt_api/: CMakeLists.txt  cpt_builder.h  cpt_client.h  cpt_server.h  cpt_types.h  linked_list.h
include/tcp_networking/: CMakeLists.txt  tcp_server.h
interface/: CMakeLists.txt  cli_dc.c  cli_dc.h  cli_dc_app.c  cli_dc_app.h
interface/cli/: CMakeLists.txt
interface/cli/include/: CMakeLists.txt  application_framework.h  cli_dc.h  command.h  user_state.h
interface/cli/src/: CMakeLists.txt  application_framework.c  cli_dc.c  command.c  handlers.c  user_state.c
interface/include/: CMakeLists.txt  command.h  handlers.h  user_state.h
interface/interface/: CMakeLists.txt
interface/interface/include/: CMakeLists.txt  command.h  handlers.h  ncurses_state.h  user_state.h
interface/interface/src/: CMakeLists.txt  command.c  handlers.c  ncurses_state.c  user_state.c
interface/ncurses/: CMakeLists.txt
interface/ncurses/include/: CMakeLists.txt  interface.h  user_state.h
interface/ncurses/src/: CMakeLists.txt  command.c  interface.c
interface/src/: CMakeLists.txt  cli_dc.c  command.c  handlers.c  user_state.c
messenger/: CMakeLists.txt  cpt_messenger.c  destroy.c  messenger.c  messenger.h  readshmem.c  shared_memory.c  shared_memory.h  writeshmem.c
networking/: CMakeLists.txt
networking/tcp/: CMakeLists.txt
networking/tcp/include/: CMakeLists.txt  tcp_client_config.h  tcp_server.h  tcp_server_config.h
networking/tcp/src/: CMakeLists.txt  tcp_client.c  tcp_server.c
networking/udp/: CMakeLists.txt
networking/udp/include/: CMakeLists.txt  udp_client.h  udp_server.h
networking/udp/src/: CMakeLists.txt  udp_client.c  udp_server.c
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cpt_chat_client.c  cpt_chat_server.c
src/cpt_api/: CMakeLists.txt  cpt_builder.c  cpt_client.c  cpt_server.c  linked_list.c
src/tcp_networking/: CMakeLists.txt
tcp_networking/: CMakeLists.txt
tcp_networking/include/: CMakeLists.txt  server_config.h  tcp_client.h  tcp_client_config.h  tcp_server.h  tcp_server_config.h
tcp_networking/src/: CMakeLists.txt  tcp_client.c  tcp_server.c
testing/: CMakeLists.txt  sandbox.c  sandbox.h  testing_main.c
testing/include/: CMakeLists.txt  channel_test.h  user_test.h
testing/src/: CMakeLists.txt  channel_test.c  user_test.c
voice/: CMakeLists.txt  voice.c  voice.h  voice_player.c
voice_arecord/: CMakeLists.txt  testing.c  voice_arecord.c  voice_arecord.h
