add_subdirectory(src)
add_subdirectory(include)

SET(CHAT_CLIENT_TARGETS
        ${CHAT_CLIENT_SOURCE}
        ${CHAT_CLIENT_INCLUDE}
        PARENT_SCOPE)

SET(CHAT_SERVER_TARGETS
        ${CHAT_SERVER_SOURCE}
        ${CHAT_SERVER_INCLUDE}
        PARENT_SCOPE)

#SET(SANDBOX_TARGETS
#        ${CHAT_SERVER_TARGETS}
#        ${CHAT_CLIENT_TARGETS}
#        ${CMAKE_CURRENT_SOURCE_DIR}/sandbox.c
#        PARENT_SCOPE)